# mi_proyecto

./: .coverage  .dockerignore  .env  .gitignore   .pre-commit-config.yaml  Dockerfile  README.md  clientes.csv  datos.json  grpc_server.py  metricas_ventas.json  modelo_abandono.joblib  orders.proto  orders_api.db  pyproject.toml  ventas.csv
alembic/versions/: 4cc7ea261131_create_user_order_order_item_tables.py
src/mi_proyecto/: api_lab.py  concurrency_lab.py  data_science_lab.py  grpc_client.py  grpc_server.py  http_lab.py  io_lab.py  main.py  models_lab.py  order_service.py  orders_cli.py  orders_pb2.py  orders_pb2_grpc.py  orm_lab.py  patterns_lab.py  pythonic_lab.py  settings.py  solid_lab.py  test_api_lab.py  test_order_service.py  test_patterns_lab.py  test_solid_lab.py
src/mi_proyecto/clean/: main.py  test_clean_architecture.py
src/mi_proyecto/clean/application/: create_order.py  ports.py
src/mi_proyecto/clean/domain/: order.py
src/mi_proyecto/clean/infrastructure/: memory.py
src/mi_proyecto/clean/presentation/: presenter.py
src/mi_proyecto/hexagonal/: main.py  test_hexagonal.py
src/mi_proyecto/hexagonal/application/: create_order.py  ports.py
src/mi_proyecto/hexagonal/domain/: order.py
src/mi_proyecto/hexagonal/infrastructure/: http_notifier.py  memory_repository.py  sqlalchemy_repository.py
