[project]
name = "mi-proyecto"
version = "0.1.0"
description = ""
authors = [
    {name = "emanuel545",email = "emanuel.legorreta5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "mi_proyecto", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]
