[project]
name = "mi-proyecto"
version = "0.1.0"
description = ""
authors = [
    {name = "emanuel545",email = "emanuel.legorreta5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.13.3,<3.0.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "pandas (>=3.0.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "typer (>=0.25.0,<0.26.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "grpcio (>=1.80.0,<2.0.0)",
    "grpcio-tools (>=1.80.0,<2.0.0)",
    "redis (>=7.4.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "mi_proyecto", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "hypothesis (>=6.152.3,<7.0.0)",
    "types-redis (>=4.6.0.20241004,<5.0.0.0)"
]

[tool.mypy]
exclude = ["alembic", "grpc_server.py"]
ignore_missing_imports = true